--- a/configure.ac
+++ b/configure.ac
@@ -6,8 +6,13 @@ AC_CONFIG_AUX_DIR([build-aux])
 AC_INIT([tekvisaosc], [0.1], [naopross@tharcway.org])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 
+# set C project
 AC_PROG_CC
 AM_PROG_CC_C_O
+
+# setup libtool
+LT_PREREQ([2.2.6])
+LT_INIT
 
 ####
 # Check for required packages / libraries
@@ -15,7 +20,6 @@ AM_PROG_CC_C_O
 LIBGTK_REQUIRED=2.91
 
 PKG_CHECK_MODULES(gtk3, [gtk+-3.0 >= $LIBGTK_REQUIRED])
-GNOME_COMPILE_WARNINGS([maximum])
 
 AC_CONFIG_FILES([
     makefile
